# patchouli

./: .gitignore  CLAUDE.md  README.md  dev.ps1  dev.sh  package.json
.claude/: settings.local.json
core/: .env.example  Cargo.toml  README.md
core/src/: database.rs  main.rs
discord/: .env.example  .gitkeep  README.md  package.json  pnpm-lock.yaml  tsconfig.json
discord/src/: client.ts  commands.ts  index.ts
doc/: api-migration-guide.md  architecture.md  dev-script.md  mcp-setup.md  restful-api.md  smart-redirect.md  usage.md
frontend/: README.md  package.json  panda.config.ts  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: CallbackPage.tsx  Dashboard.tsx  LoginPage.tsx  ProtectedRoute.tsx  RegistrationPage.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/services/: api.ts
mcp/: .gitkeep  README.md  package.json  pnpm-lock.yaml
mcp/src/: client.ts  index.ts
